--- a/src/styles/slider.css
+++ b/src/styles/slider.css
@@ -9,6 +9,7 @@
 
     background-color: rgba(255, 255, 255, 0.5);
     border-radius: 20px;
+    transition: .2s ease-in-out;
 }
 
 .alice-carousel__dots-item:not(.__custom):not(:last-child) {
